Update EMI integration (recipe sorting appears to be broken)